# financial-summarization-meta-evaluation

./: .env  .gitignore  README.md  analysis.ipynb  evaluators_comparison.ipynb  main.py  pyproject.toml  requirements.txt  setup.cfg
examples/: example.env
notebooks/: eda.ipynb  noisy_candidate_summaries.ipynb
results/: English.csv  English_ld_fact_score.csv  English_sampled_docs.txt  Greek.csv  Greek_trunc.csv  Spanish.csv  Spanish_trunc.csv
results/evaluation/: English_factcc.csv  English_ld_fact_score_library_tensors.csv  Greek.csv  Greek_bleurt.csv  Greek_trunc.csv  Spanish.csv  Spanish_bleurt.csv  Spanish_trunc.csv
results/sampling/: English_sampled_docs_new.txt  English_seeds.json  English_seeds_new.json  Greek_sampled_docs_new.txt  Greek_seeds_new.json  Spanish_sampled_docs_new.txt  Spanish_seeds_new.json
samples/: sample.config.yaml  sample.env
src/: data_handler.py  evaluation_results.csv  main.py  summary_corruptor.py  summary_destructor.py  summary_evaluator.py  summary_generator.py
src/modules/: data_collector.py  stats_extractor.py  summary_corruptor.py  summary_evaluator.py  summary_generator.py  tokenizer.py
src/pipelines/: collect.py  evaluate.py  generate.py  get_stats.py
src/registries/: languages_registry.py  metrics_registry.py
src/utils/: sampling.py  summary_corruptor_utils.py  summary_evaluator_utils.py  visualization.py
tables/: randomly_swapped_words.tex
